# file-pool

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/: filepool_impl.h
demo/source/: example.cpp  filepool_impl.cpp
file_pool/: CMakeLists.txt
file_pool/include/: filepool_context.h  state_downloading.h  state_enum.h  state_filecheck.h  state_interface.h  state_none.h  state_ready.h
file_pool/source/: filepool_context.cpp  state_downloading.cpp  state_filecheck.cpp  state_interface.cpp  state_none.cpp  state_ready.cpp
